tests/errors/reserved_identifier.rsg
// TEST: compile_error
// EXPECT-ERROR: identifier 'rsg_data' uses a prefix reserved for the compiler/runtime
module test_err

fn main() {
    rsg_data := 42
}
